--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,18 @@
 # Compiled class file
 *.class
 
+/target/
+.mvn/
+
+### STS ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
+
 # Log file
 *.log
 
